# kino-dlp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  contributing.md  docs.md  internals.md  local_plex_files.md  plex_naming.md  site_scraping_reference.md  spec.md
scrap_pub/: models.py
scrap_pub/daemon/: __init__.py  cli_main.py  config.py  db.py  downloader.py  ffmpeg.py  scheduler.py  scraper.py  server_http.py  server_main.py  session.py  timespec.py  ui.py  ws_protocol.py  ws_server.py
skills/: scrappub_skill.md  scrappub_sql_skill.md
tests/: test_cli_paths.py  test_config.py  test_db.py  test_downloader_output_root.py  test_ffmpeg.py  test_models.py  test_output_dir_validation.py  test_scaffold_only.py  test_scheduler_db_run.py  test_scraper_names.py  test_timespec.py  test_ws_integration.py  test_ws_protocol.py
