[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scrap-pub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.7",
    "beautifulsoup4>=4.14",
    "lxml>=6.0",
    "pydantic>=2.12",
    "websockets>=16.0",
]

[project.scripts]
scrap-pub-server = "scrap_pub.daemon.server_main:main"
scrap-pub        = "scrap_pub.daemon.cli_main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scrap_pub*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
